<?xml version="1.0" encoding="utf-8"?>

<ScrollView  xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >
    
    <RelativeLayout
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" >
	
	    <TextView
	        android:id="@+id/contact_form_title"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentTop="true"
	        android:layout_centerHorizontal="true"
	        android:textStyle="bold"
	        android:textAppearance="?android:attr/textAppearanceLarge" />
	    
	    <TextView
	        android:id="@+id/full_name_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentStart="true"
	        android:layout_alignBaseline="@+id/full_name_input"
	        android:layout_marginLeft="8dp"
	        android:layout_marginStart="8dp"
	        android:layout_marginRight="12dp"
	        android:layout_marginEnd="12dp"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/full_name_input"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentEnd="true"
	        android:layout_below="@+id/contact_form_title"
	        android:layout_marginTop="12dp"
	        android:layout_marginRight="8dp"
	        android:layout_marginEnd="8dp"
	        android:layout_toRightOf="@+id/full_name_label"
	        android:layout_toEndOf="@+id/full_name_label"
	        android:singleLine="true"
	        android:ems="10"
	        android:inputType="textPersonName" >
	
	        <requestFocus />
	    </EditText>
	    
	    <TextView
	        android:id="@+id/email_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentStart="true"
	        android:layout_alignLeft="@+id/full_name_label"
	        android:layout_alignStart="@+id/full_name_label"
	        android:layout_alignBaseline="@+id/email_input"
	        android:layout_marginTop="8dp"
	        android:layout_marginLeft="8dp"
	        android:layout_marginStart="8dp"
	        android:text="@string/contact_email"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/email_input"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentEnd="true"
	        android:layout_below="@+id/full_name_input"
	        android:layout_alignLeft="@+id/full_name_input"
	        android:layout_alignStart="@+id/full_name_input"
	        android:layout_marginRight="8dp"
	        android:layout_marginEnd="8dp"
	        android:layout_toRightOf="@+id/email_label"
	        android:layout_toEndOf="@+id/email_label"
	        android:singleLine="true"
	        android:ems="10"
	        android:inputType="textEmailAddress" />
	        
	    <TextView
	        android:id="@+id/subject_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentStart="true"
	        android:layout_alignLeft="@+id/full_name_label"
	        android:layout_alignStart="@+id/full_name_label"
	        android:layout_alignBaseline="@+id/subject_input"
	        android:layout_marginTop="8dp"
	        android:layout_marginLeft="8dp"
	        android:layout_marginStart="8dp"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/subject_input"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentEnd="true"
	        android:layout_below="@+id/email_input"
	        android:layout_alignLeft="@+id/email_input"
	        android:layout_alignStart="@+id/email_input"
	        android:layout_marginRight="8dp"
	        android:layout_marginEnd="8dp"
	        android:layout_toRightOf="@+id/subject_label"
	        android:layout_toEndOf="@+id/subject_label"
	        android:singleLine="true"
	        android:ems="10" />
	    
	    <TextView
	        android:id="@+id/message_label"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentLeft="true"
	        android:layout_alignParentStart="true"
	        android:layout_alignLeft="@+id/full_name_label"
	        android:layout_alignStart="@+id/full_name_label"
	        android:layout_alignBaseline="@+id/message_input"
	        android:layout_marginTop="8dp"
	        android:layout_marginLeft="8dp"
	        android:layout_marginStart="8dp"
	        android:textAppearance="?android:attr/textAppearanceMedium" />
	
	    <EditText
	        android:id="@+id/message_input"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_alignParentRight="true"
	        android:layout_alignParentEnd="true"
	        android:layout_below="@+id/subject_input"
	        android:layout_alignLeft="@+id/subject_input"
	        android:layout_alignStart="@+id/subject_input"
	        android:layout_marginRight="8dp"
	        android:layout_marginEnd="8dp"
	        android:layout_toRightOf="@+id/message_label"
	        android:layout_toEndOf="@+id/message_label"
	        android:lines="3"
	        android:maxLength="1000"
	        android:ems="10" />
	    
	    <TextView
	        android:id="@+id/all_required"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/message_input"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="6dp"
	        android:text="@string/all_required"
	        android:textColor="@color/red"
	        android:textAppearance="?android:attr/textAppearanceSmall"
	        android:visibility="invisible" />
	
	    <Button
	        android:id="@+id/send_button"
	        android:layout_width="140dp"
	        android:layout_height="wrap_content"
	        android:layout_below="@+id/all_required"
	        android:layout_centerHorizontal="true"
	        android:layout_marginTop="6dp" />
	    
	    <LinearLayout
	        android:id="@+id/contact_kast_layout"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:layout_centerHorizontal="true"
	        android:layout_below="@+id/send_button"
	        android:layout_marginTop="16dp"
	        android:orientation="vertical" >
	        
	        <TextView
	            android:id="@+id/contact_kast_name"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:textStyle="bold"
	            android:text="@string/contact_kast_name" />
	        
	        <TextView
	            android:id="@+id/contact_kast_office"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/contact_kast_office" />
	          
	        <TextView
	            android:id="@+id/contact_kast_post"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/contact_kast_post"
	            android:autoLink="map" />
	        
	        <TextView
	            android:id="@+id/contact_kast_tel"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/contact_kast_tel"
	            android:autoLink="phone" />
	        
	        <TextView
	            android:id="@+id/contact_kast_fax"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/contact_kast_fax" />
	        
	        <TextView
	            android:id="@+id/contact_kast_email"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/contact_kast_email"
	            android:autoLink="email" />
	        
	        <TextView
	            android:id="@+id/contact_tarl_name"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:layout_marginTop="8dp"
	            android:textStyle="bold"
	            android:text="@string/contact_tarl_name" />
	        
	        <TextView
	            android:id="@+id/contact_tarl_office"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/contact_tarl_office" />
	          
	        <TextView
	            android:id="@+id/contact_tarl_post"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/contact_tarl_post"
	            android:autoLink="map" />
	        
	        <TextView
	            android:id="@+id/contact_tarl_tel"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/contact_tarl_tel"
	            android:autoLink="phone" />
	        
	        <TextView
	            android:id="@+id/contact_tarl_email"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/contact_tarl_email"
	            android:autoLink="email" />
	        
	    </LinearLayout>
	
	</RelativeLayout>

</ScrollView>